--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -21,7 +21,7 @@
         <h2>Informações sobre ações e FII's da bolsa sem complicação</h2>
         <div id="open_dashboard" class="">
             
-                <a href="./dashboard">
+                <a href="/dashboard">
                     <button class="ui toggle huge  primary button">Começar!
                         <i class="right arrow icon">
                         </i>
