--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -15,9 +15,10 @@
   </head>
   <body>
       <div class="ui container"> 
-        <h2>Lançamento de Ações</h2>
+        <h2>Facilita IR - Web</h2>
 
         {% block content %}{% endblock %}      
       </div>
   </body>
+  <footer>Developed by Mikxingu</footer>
 </html>
