--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -8,7 +8,14 @@
 </select>
 
   <div>
-    <button class="ui icon button">
+    <button class="ui icon button" id="add_stock">
+      <script>
+        $(document).ready(function(){
+          $("#add_stock").click(function(){
+            console.log("I Was Clicked!")
+          })
+        })
+      </script>
       <i class="plus icon"></i>
     </button>
   </div>
@@ -24,7 +31,8 @@
         <th>CNPJ</th>
         <th>Discriminação</th>
         <th>Preço de fechamento Anual</th>
-    </tr></thead>
+    </tr>
+  </thead>
     <tbody>
       {% block row %}
       <tr>
