--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Stock Dashboard</title>
+    <title>FacilitaIR - Web</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
