Updated dashboard to show report a bug fixes #7

--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -115,7 +115,7 @@
         <th>Quantidade</th>
         <th>Preço médio</th>
         <th>Preço final anual</th>
-        <th>Discriminação</th>
+        <th>Discriminação sugerida</th>
         <th>Situação em 31-12-2022</th>
     </tr>
   </thead>
