--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -20,5 +20,20 @@
         {% block content %}{% endblock %}      
       </div>
   </body>
-  <footer>Developed by Mikxingu</footer>
+  <footer>
+    
+   <h1></h1>
+   <h1></h1>
+   <h1></h1>
+      <h4>Desenvolvido por mikxingu</h2>
+      <h5>Para reportar um bug, clique no botão abaixo: </h4>
+      <a href="https://github.com/mikxingu/facilitair-web/issues">
+        <button class="ui red mini toggle button">
+            <i class="bug icon">
+            </i>
+        </button>
+      </a>
+      
+    
+  </footer>
 </html>
