Added Instructions link on home page

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -20,17 +20,26 @@
         <h1 class="ui inverted header">Facilita IR - Lançamento de ações</h1>
         <h2>Informações sobre ações e FII's da bolsa sem complicação</h2>
         <div id="open_dashboard" class="">
-            
+            <h3>Iniciar lançamentos</h3>
                 <a href="/dashboard">
-                    <button class="ui toggle huge  primary button">Começar!
+                    <button class="ui toggle medium primary button">Começar!
                         <i class="right arrow icon">
                         </i>
                     </button>
                 </a>
+            <h1></h1>
                 
-            
-            
         </div>
+        <div class="" id="open_docs">
+            <h3>Instruções de uso</h3>
+            <a href="https://github.com/mikxingu/facilitair-web">
+                <button class="ui toggle medium  primary button">Documentação
+                    <i class="book icon">
+                    </i>
+                </button>
+            </a>
+        </div>
+        
     </div>
 </body>
 {% endblock%}
