--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -28,8 +28,8 @@
       <h4>Desenvolvido por mikxingu</h2>
       <h5>Para reportar um bug, clique no botão abaixo: </h4>
       <a href="https://github.com/mikxingu/facilitair-web/issues">
-        <button class="ui red mini toggle button">
-            <i class="bug icon">
+        <button class="ui mini red button">
+            <i class="icon bug">
             </i>
         </button>
       </a>
