Removed footer from main page

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -18,7 +18,7 @@
 <body>
     <div class="ui text container">
         <h1 class="ui inverted header">Facilita IR - Lançamento de ações</h1>
-        <h2>Informações sobre ações e FII's da bolsa sem complicação</h2>
+        <h2>Informações de ativos da bolsa sem complicação</h2>
         <div id="open_dashboard" class="">
             <h3>Iniciar lançamentos</h3>
                 <a href="/dashboard">
@@ -38,6 +38,19 @@
                     </i>
                 </button>
             </a>
+        </div>
+        <h1></h1>
+
+        <div class="" id="disclaimer">
+            <div class="ui negative message">
+                <i class="close icon"></i>
+                <div class="header">
+                  Disclaimer!
+            </div>
+            <p>As informações apresentadas nesse site estão disponíveis na web.</p>
+              <p>O desenvolvedor não se responsabiliza por erros de preenchimento da declaração.</p>
+            </div>
+
         </div>
         
     </div>
