--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -122,4 +122,21 @@
     <tbody>
     </tbody>
   </table>
+
+  <footer>
+    
+    <h1></h1>
+    <h1></h1>
+    <h1></h1>
+       <h4>Desenvolvido por mikxingu</h2>
+       <h5>Para reportar um bug, clique no botão abaixo: </h4>
+       <a href="https://github.com/mikxingu/facilitair-web/issues">
+         <button class="ui mini red button">
+             <i class="icon bug">
+             </i>
+         </button>
+       </a>
+       
+     
+   </footer>
 {% endblock%}
