--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -122,6 +122,11 @@
               unit_description = "GRUPO:04 - CÓDIGO:04  ";
               unit = " UNIDADES ";
               break;
+            case 4:
+              type_string = "ETF";
+              unit_description = "GRUPO:07 - CÓDIGO:09  ";
+              unit = " COTAS ";
+              break;
             
             default:
               type_string = "ACAO";
