--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -12,6 +12,9 @@
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7788656342193780"
+     crossorigin="anonymous"></script>
+
   </head>
   <body>
       <div class="ui container"> 
