--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -3,174 +3,180 @@
 
 {% block content%}
 <div>
-<div class="ui search">
-  <div class="ui icon input">
-    <input class="prompt" type="text" placeholder="Ativo...", id="in_ticker">
-    <i class="search icon"></i>
+  <div class="ui search">
+    <div class="ui icon input">
+      <input class="prompt" type="text" placeholder="Ativo..." , id="in_ticker">
+      <i class="search icon"></i>
+    </div>
+    <div class="results"></div>
   </div>
-  <div class="results"></div>
-</div>
 
-{% set stock_list = [] %}
+  {% set stock_list = [] %}
 
-{% for stock in all_stocks %}
-    {% set _ = stock_list.append(stock) %}
-{% endfor %}
+  {% for stock in all_stocks %}
+  {% set _ = stock_list.append(stock) %}
+  {% endfor %}
 
-<script>
+  <script>
     var js_list = {{ stock_list | tojson }};
-</script>
+  </script>
 
-<div class="ui input">
-  <input type="number" placeholder="Quantidade" id="in_quantity" required="true">
-</div>
+<select class="ui selection dropdown">
+  <option value="">Exercício</option>
+  <option value="1">2023</option>
+  <option value="0">2022</option>
+</select>
 
-<div class="ui input">
-  <input type="number" placeholder="Preco Medio" id="in_average" required="false">
-</div>
-<div>
-</div>
+  <div class="ui input">
+    <input type="number" placeholder="Quantidade" id="in_quantity" required="true">
+  </div>
+
+  <div class="ui input">
+    <input type="number" placeholder="Preco Medio" id="in_average" required="false">
+  </div>
+  <div>
+  </div>
   <div>
     <button class="ui icon button" id="add_stock">
       <script>
-        $(document).ready(function(){
+        $(document).ready(function () {
 
-          $(document).on('change', '#stocks input[type="checkbox"]', function() {
-          // Get the table row that the checkbox is in
-          var row = $(this).closest('tr');
-  
-          // If the checkbox is checked, highlight the row
-          if ($(this).prop('checked')) {
-            row.css('background-color', '#dcdcdc');
-          } else {
-            row.css('background-color', '');
-          }
-        });
-        var content = [];
+          $(document).on('change', '#stocks input[type="checkbox"]', function () {
+            // Get the table row that the checkbox is in
+            var row = $(this).closest('tr');
+
+            // If the checkbox is checked, highlight the row
+            if ($(this).prop('checked')) {
+              row.css('background-color', '#dcdcdc');
+            } else {
+              row.css('background-color', '');
+            }
+          });
+          var content = [];
 
           js_list.forEach(element => {
-            let object = { title: element};
+            let object = { title: element };
             content.push(object)
           });
 
-           $('.ui.search')
+          $('.ui.search')
             .search({
               source: content
             });
-          
-          $("#add_stock").click(function() {
-            
+
+          $("#add_stock").click(function () {
+
             var stock_selected = document.getElementById("in_ticker");
             var ticker = stock_selected.value;
 
             var quantity = document.getElementById("in_quantity").value;
 
             number_quantity = Number(quantity);
-            
-            if (number_quantity == 0){
+
+            if (number_quantity == 0) {
               showError("Campo quantidade é obrigatório!!");
               return;
             }
 
             var average = document.getElementById("in_average").value;
-            
+
             var result;
 
-          $.ajax({
-            type: "GET",
-            url: '/stock/'+ticker,
-            datatype: "json",
-            async: false,
-            success: function(data){
-              result = data;      
+            $.ajax({
+              type: "GET",
+              url: '/stock/' + ticker,
+              datatype: "json",
+              async: false,
+              success: function (data) {
+                result = data;
+              }
+            });
+
+            let type = result[0]
+
+            let cnpj = result[1]
+
+            let companyName = result[2]
+
+            let year_close = result[3]
+
+
+            var unit
+
+            var unit_description
+
+            if (average) {
+              year_sum = average * quantity
             }
-          });
-
-          let type = result[0]
-
-          let cnpj = result[1]
-
-          let companyName = result[2]
-          
-          let year_close = result[3]
-
-
-          var unit
-
-          var unit_description
-
-          if (average){
-            year_sum = average * quantity
-          }
-          else {
-            average = year_close
-          }
-
-          var type_string
-
-          switch (type) {
-            case 1:
-              type_string = "ACAO";
-              unit_description = "GRUPO:03 - CÓDIGO:01";
-              unit = " ACOES ";
-              break;
-            case 2:
-              type_string = "FII";
-              unit_description = "GRUPO:07 - CÓDIGO:03";
-              unit = " COTAS ";
-              break;
-            case 3:
-              type_string = "BDR";
-              unit_description = "GRUPO:04 - CÓDIGO:04  ";
-              unit = " UNIDADES ";
-              break;
-            case 4:
-              type_string = "ETF";
-              unit_description = "GRUPO:07 - CÓDIGO:09  ";
-              unit = " COTAS ";
-              break;
-            
-            default:
-              type_string = "ACAO";
-              unit_description = "GRUPO:03 - CÓDIGO:01";
-              unit = " ACOES ";
-              break;
+            else {
+              average = year_close
             }
-          var description = quantity + unit + companyName + " COM PRECO MEDIO DE "+ average + " POR UNIDADE."
-          
-          var year_sum = Number(Math.round(parseFloat(quantity * year_close + 'e' + 2)) + 'e-' + 2).toFixed(2)
-            
-          var markup = 
+
+            var type_string
+
+            switch (type) {
+              case 1:
+                type_string = "ACAO";
+                unit_description = "GRUPO:03 - CÓDIGO:01";
+                unit = " ACOES ";
+                break;
+              case 2:
+                type_string = "FII";
+                unit_description = "GRUPO:07 - CÓDIGO:03";
+                unit = " COTAS ";
+                break;
+              case 3:
+                type_string = "BDR";
+                unit_description = "GRUPO:04 - CÓDIGO:04  ";
+                unit = " UNIDADES ";
+                break;
+              case 4:
+                type_string = "ETF";
+                unit_description = "GRUPO:07 - CÓDIGO:09  ";
+                unit = " COTAS ";
+                break;
+
+              default:
+                type_string = "ACAO";
+                unit_description = "GRUPO:03 - CÓDIGO:01";
+                unit = " ACOES ";
+                break;
+            }
+            var description = quantity + unit + companyName + " COM PRECO MEDIO DE " + average + " POR UNIDADE."
+
+            var year_sum = Number(Math.round(parseFloat(quantity * year_close + 'e' + 2)) + 'e-' + 2).toFixed(2)
+
+            var markup =
               "<tr><td><input type='checkbox' id='test' class='completed'></td><td>" + ticker + "</td><td>" + type_string + "<div><i class='question circle outline icon' title='" + unit_description + "'></i><div> " +
-              "</td><td>" + cnpj + "</td><td>" + companyName + "</td><td>" + quantity + 
+              "</td><td>" + cnpj + "</td><td>" + companyName + "</td><td>" + quantity +
               "</td><td>" + average + "</td><td>" + year_close + "</td><td>" + description + "</td><td>" +
               "R$  " + year_sum + "</td><td><button class='ui icon red button delete-row'><i class='trash icon'></i></button></td></tr>";
 
-              $("table tbody").append(markup);
-              clearFormData();
-            });
-
-            $(document).on('click', '.delete-row', function() {
-              var row = $(this).closest('tr');
-              row.remove();
-            });
+            $("table tbody").append(markup);
+            clearFormData();
           });
+
+          $(document).on('click', '.delete-row', function () {
+            var row = $(this).closest('tr');
+            row.remove();
+          });
+        });
         // LIMPA O FORM DE INPUT PARA NOVO LANÇAMENTO
-        function clearFormData(){
+        function clearFormData() {
           document.getElementById("in_quantity").value = null;
           document.getElementById("in_average").value = null;
         }
 
         // EXIBE A MENSAGEM PASSADA COMO PARAMETRO NA TELA DO NAVEGADOR
-        function showError(message){
+        function showError(message) {
           alert(message);
         }
       </script>
       <i class="plus icon"></i>
     </button>
   </div>
-  
-<table class="ui celled table" id="stocks">
+
+  <table class="ui celled table" id="stocks">
     <thead>
       <tr>
         <th>Lançado</th>
@@ -183,26 +189,27 @@
         <th>Preço final anual</th>
         <th>Discriminação sugerida</th>
         <th>Situação em 31-12-2022</th>
-    </tr>
-  </thead>
+      </tr>
+    </thead>
     <tbody>
     </tbody>
   </table>
 
   <footer>
-    
+
     <h1></h1>
     <h1></h1>
     <h1></h1>
-       <h4>Desenvolvido por mikxingu</h2>
-       <h5>Para reportar um bug, clique no botão abaixo: </h4>
-       <a href="https://github.com/mikxingu/facilitair-web/issues">
-         <button class="ui mini red button">
-             <i class="icon bug">
-             </i>
-         </button>
-       </a>
-       
-     
-   </footer>
-{% endblock%}
+    <h4>Desenvolvido por mikxingu</h2>
+      <h5>Para reportar um bug, clique no botão abaixo:
+    </h4>
+    <a href="https://github.com/mikxingu/facilitair-web/issues">
+      <button class="ui mini red button">
+        <i class="icon bug">
+        </i>
+      </button>
+    </a>
+
+
+  </footer>
+  {% endblock%}
