--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -1,5 +1,24 @@
 <html>
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-S2X5FMMCX6"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-S2X5FMMCX6");
+    </script>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7788656342193780"
+      crossorigin="anonymous"
+    ></script>
     <title>FacilitaIR - Web</title>
     <link
       rel="stylesheet"
@@ -12,16 +31,17 @@
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
 
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7788656342193780"
-     crossorigin="anonymous"></script>
-
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7788656342193780"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-      <div class="ui container"> 
-        <h2>Facilita IR - Web</h2>
+    <div class="ui container">
+      <h2>Facilita IR - Web</h2>
 
-        {% block content %}{% endblock %}      
-      </div>
+      {% block content %}{% endblock %}
+    </div>
   </body>
-  
 </html>
