--- a/src/templates/dashboard.html
+++ b/src/templates/dashboard.html
@@ -21,10 +21,12 @@
     var js_list = {{ stock_list | tojson }};
   </script>
 
-<select class="ui selection dropdown">
+<select class="ui selection dropdown" id="in_year">
   <option value="">Exercício</option>
-  <option value="1">2023</option>
-  <option value="0">2022</option>
+  <option value="2024">2024</option>
+  <option value="2023">2023</option>
+  <option value="2022">2022</option>
+  <option value="2021">2021</option>
 </select>
 
   <div class="ui input">
@@ -65,14 +67,14 @@
             });
 
           $("#add_stock").click(function () {
-
+            var selected_year = document.getElementById("in_year").value;
             var stock_selected = document.getElementById("in_ticker");
             var ticker = stock_selected.value;
 
             var quantity = document.getElementById("in_quantity").value;
 
             number_quantity = Number(quantity);
-
+            
             if (number_quantity == 0) {
               showError("Campo quantidade é obrigatório!!");
               return;
@@ -84,7 +86,7 @@
 
             $.ajax({
               type: "GET",
-              url: '/stock/' + ticker,
+              url: '/stock/' + ticker + "/" + selected_year,
               datatype: "json",
               async: false,
               success: function (data) {
